--- a/Views/SzczegolyStezeniaSubstancjiOkno.xaml
+++ b/Views/SzczegolyStezeniaSubstancjiOkno.xaml
@@ -5,11 +5,52 @@
     xmlns:ctrl="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:BadanieKrwi.Views"
+    xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="SzczegolyStezeniaSubstancjiOkno"
+    xmlns:vm="clr-namespace:BadanieKrwi.ViewModels"
+    x:Name="szczegolyStezeniaSubstancji"
+    Title="Badanie Krwi - Szczgóły Stężenia Substancji"
     Width="800"
-    Height="450"
+    Height="500"
+    ResizeMode="CanResizeWithGrip"
+    ShowMaxRestoreButton="False"
+    ShowMinButton="False"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
-    <Grid />
+    <ctrl:MetroWindow.DataContext>
+        <vm:SzczegolyStezeniaSubstancjiViewModel />
+    </ctrl:MetroWindow.DataContext>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <TextBlock
+            HorizontalAlignment="Center"
+            Style="{StaticResource topTextBlock30}"
+            Text="{Binding Naglowek}"
+            TextWrapping="Wrap" />
+
+        <!--
+            Opisowka kontrolki wykresu:
+            https://v0.lvcharts.com/App/examples/v1/Wpf/Line
+        -->
+
+        <lvc:CartesianChart Grid.Row="1" Series="{Binding SerieNaWykresie}">
+            <lvc:CartesianChart.AxisX>
+                <lvc:Axis Labels="{Binding EtykietyX}" />
+            </lvc:CartesianChart.AxisX>
+        </lvc:CartesianChart>
+
+        <Button
+            Grid.Row="2"
+            Width="100"
+            Margin="3"
+            HorizontalAlignment="Center"
+            Command="{Binding WrocCommand}"
+            CommandParameter="{Binding ElementName=szczegolyStezeniaSubstancji}"
+            Content="Wróć" />
+    </Grid>
 </ctrl:MetroWindow>
