- przeprojektowanie BadanieOkno - usunięcie okna RejestracjaOkno - modyfikacje w KlinikiOkno, NoweBadanieOkno, StatystykiOkno, SzczegolyStezeniaSubstancjiOkno

--- a/Views/KalendarzBadanOkno.xaml
+++ b/Views/KalendarzBadanOkno.xaml
@@ -32,6 +32,14 @@
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+        <Image
+            Grid.RowSpan="5"
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Center"
+            Opacity="0.2"
+            Source="/Files/Images/BadanieKrwi-LogoTlo.png"
+            Stretch="Uniform" />
+
         <TextBlock
             Grid.ColumnSpan="2"
             Style="{StaticResource topTextBlock30}"
