--- a/Views/StatystykiOkno.xaml
+++ b/Views/StatystykiOkno.xaml
@@ -33,6 +33,15 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+
+        <Image
+            Grid.RowSpan="7"
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Center"
+            Opacity="0.2"
+            Source="/Files/Images/BadanieKrwi-LogoTlo.png"
+            Stretch="Uniform" />
+
         <TextBlock
             Grid.ColumnSpan="2"
             Style="{StaticResource topTextBlock30}"
