--- a/Views/BadanieOkno.xaml
+++ b/Views/BadanieOkno.xaml
@@ -4,12 +4,265 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ctrl="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
     xmlns:local="clr-namespace:BadanieKrwi.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="BadanieOkno"
-    Width="800"
-    Height="450"
+    xmlns:vm="clr-namespace:BadanieKrwi.ViewModels"
+    x:Name="badanie"
+    Title="{Binding NaglowekOkna}"
+    Height="820"
+    MinWidth="550"
+    MinHeight="400"
+    MaxWidth="550"
+    dialog:DialogParticipation.Register="{Binding}"
+    ResizeMode="CanResizeWithGrip"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
-    <Grid />
+    <ctrl:MetroWindow.DataContext>
+        <vm:BadanieViewModel />
+    </ctrl:MetroWindow.DataContext>
+
+    <ctrl:MetroWindow.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </ctrl:MetroWindow.Resources>
+    <Grid Margin="6,0,6,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Image
+            Grid.RowSpan="7"
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Center"
+            Opacity="0.2"
+            Source="/Files/Images/BadanieKrwi-LogoTlo.png"
+            Stretch="Uniform" />
+
+        <TextBlock
+            Grid.ColumnSpan="2"
+            Style="{StaticResource topTextBlock30}"
+            Text="{Binding Naglowek}" />
+
+        <TextBlock Grid.Row="1" Text="Data badania" />
+        <DatePicker
+            Grid.Row="1"
+            Grid.Column="1"
+            IsEnabled="{Binding CzyEdytowac}"
+            SelectedDate="{Binding WybraneBadanie.DataBadania}" />
+
+        <TextBlock Grid.Row="2" Text="Nazwa Badania" />
+        <TextBox
+            Grid.Row="2"
+            Grid.Column="2"
+            IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+            Text="{Binding WybraneBadanie.NazwaBadania, UpdateSourceTrigger=PropertyChanged}" />
+
+        <TextBlock Grid.Row="3" Text="Nazwa Kliniki" />
+        <TextBox
+            Grid.Row="3"
+            Grid.Column="2"
+            IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+            Text="{Binding WybraneBadanie.NazwaKliniki, UpdateSourceTrigger=PropertyChanged}" />
+
+        <TextBlock
+            Grid.Row="4"
+            Grid.ColumnSpan="2"
+            Style="{StaticResource topTextBlock20}"
+            Text="Morfologia Krwi" />
+
+        <ScrollViewer
+            Grid.Row="5"
+            Grid.ColumnSpan="2"
+            VerticalScrollBarVisibility="Auto">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Stężenie Erytrocytów RBC [liczba/μl]" />
+                <TextBox
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.StezenieErytrocytowRbc, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="1" Text="Hemoglobina Hb [g/dl]" />
+                <TextBox
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.HemoglobinaHb, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="2" Text="Hematokryt Htc [%]" />
+                <TextBox
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.HematokrytHtc, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="3" Text="Średnia objętość erytrocytu MCV [fl]" />
+                <TextBox
+                    Grid.Row="3"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.SredniaObjetoscErytrocytuMcv, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="4" Text="Średnia masa hemoglobiny w erytrocycie MCH [pg]" />
+                <TextBox
+                    Grid.Row="4"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.SredniaMasaHemoglobinyWErytrocycieMch, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="5" Text="Średnie stężenie hemoglobiny w erytrocytach MCHC [g/dl]" />
+                <TextBox
+                    Grid.Row="5"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.SrednieStezenieHemoglobinyWErytrocytachMchc, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="6" Text="Rozpiętość rozkładu objętości erytrocytów RDW-CV [%]" />
+                <TextBox
+                    Grid.Row="6"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.RozpietoscRozkladuObjetosciErytrocytowRdwCw, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="7" Text="Retikulocyty RC [%]" />
+                <TextBox
+                    Grid.Row="7"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.RetikulocytyRc, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="8" Text="Stężenie leukocytów WBC [liczba/μl]" />
+                <TextBox
+                    Grid.Row="8"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.StezenieLeukocytowWbc, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="9" Text="Neutrofile [liczba/μl]" />
+                <TextBox
+                    Grid.Row="9"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.Neutrofile, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="10" Text="Bazofile [liczba/μl]" />
+                <TextBox
+                    Grid.Row="10"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.Bazofile, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="11" Text="Eozynofile [liczba/μl]" />
+                <TextBox
+                    Grid.Row="11"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.Eozynofile, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="12" Text="Limfocyty [liczba/μl]" />
+                <TextBox
+                    Grid.Row="12"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.Limfocyty, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="13" Text="Monocyty [liczba/μl]" />
+                <TextBox
+                    Grid.Row="13"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.Monocyty, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="14" Text="Płytki krwi PLT [liczba/μl]" />
+                <TextBox
+                    Grid.Row="14"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.PlytkiKrwiPlt, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="15" Text="Średnia objętość krwi MPV [fl]" />
+                <TextBox
+                    Grid.Row="15"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.SredniaObjetoscKrwiMpv, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="16" Text="Żelazo" />
+                <TextBox
+                    Grid.Row="16"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.Zelazo, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="17" Text="Magnez" />
+                <TextBox
+                    Grid.Row="17"
+                    Grid.Column="1"
+                    IsReadOnly="{Binding CzyKontrolkiTylkoDoOdczytu}"
+                    Text="{Binding WybraneBadanie.Magnez, UpdateSourceTrigger=PropertyChanged}" />
+            </Grid>
+        </ScrollViewer>
+
+        <StackPanel
+            Grid.Row="6"
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Center"
+            Orientation="Horizontal">
+            <Button
+                Background="LightSkyBlue"
+                Command="{Binding EdytujBadaniePrzycisk.Command}"
+                CommandParameter="{Binding EdytujBadaniePrzycisk.CommandParameter}"
+                Content="{Binding EdytujBadaniePrzycisk.Content}" />
+            <Button
+                Background="LightSkyBlue"
+                Command="{Binding ZapiszZmianyPrzycisk.Command}"
+                CommandParameter="{Binding ElementName=badanie}"
+                Content="{Binding ZapiszZmianyPrzycisk.Content}"
+                Visibility="{Binding CzyEdytowac, Converter={StaticResource BooleanToVisibilityConverter}}" />
+            <Button
+                Background="LightSkyBlue"
+                Command="{Binding PrzerwijEdycjePrzycisk.Command}"
+                CommandParameter="{Binding PrzerwijEdycjePrzycisk.CommandParameter}"
+                Content="{Binding PrzerwijEdycjePrzycisk.Content}"
+                Visibility="{Binding CzyEdytowac, Converter={StaticResource BooleanToVisibilityConverter}}" />
+            <Button
+                Background="LightSkyBlue"
+                Command="{Binding WrocPrzycisk.Command}"
+                CommandParameter="{Binding ElementName=badanie}"
+                Content="{Binding WrocPrzycisk.Content}" />
+        </StackPanel>
+    </Grid>
 </ctrl:MetroWindow>
