--- a/Views/KlinikiOkno.xaml
+++ b/Views/KlinikiOkno.xaml
@@ -30,6 +30,15 @@
             <ColumnDefinition Width="100" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+
+        <Image
+            Grid.RowSpan="4"
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Center"
+            Opacity="0.2"
+            Source="/Files/Images/BadanieKrwi-LogoTlo.png"
+            Stretch="Uniform" />
+
         <TextBlock
             Grid.ColumnSpan="2"
             Style="{StaticResource topTextBlock30}"
