--- a/Views/SzczegolyStezeniaSubstancjiOkno.xaml
+++ b/Views/SzczegolyStezeniaSubstancjiOkno.xaml
@@ -27,6 +27,13 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
+        <Image
+            Grid.RowSpan="3"
+            HorizontalAlignment="Center"
+            Opacity="0.2"
+            Source="/Files/Images/BadanieKrwi-LogoTlo.png"
+            Stretch="Uniform" />
+
         <TextBlock
             HorizontalAlignment="Center"
             Style="{StaticResource topTextBlock30}"
