--- a/Views/BadanieOkno.xaml
+++ b/Views/BadanieOkno.xaml
@@ -15,6 +15,7 @@
     MinHeight="400"
     MaxWidth="550"
     dialog:DialogParticipation.Register="{Binding}"
+    Icon="/Files/Images/BadanieKrwi-Ikona.ico"
     ResizeMode="CanResizeWithGrip"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
