--- a/Views/KalendarzBadanOkno.xaml
+++ b/Views/KalendarzBadanOkno.xaml
@@ -13,6 +13,7 @@
     Width="500"
     Height="450"
     dialog:DialogParticipation.Register="{Binding}"
+    Icon="/Files/Images/BadanieKrwi-Ikona.ico"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
