--- a/Views/KlinikiOkno.xaml
+++ b/Views/KlinikiOkno.xaml
@@ -13,6 +13,7 @@
     Width="600"
     Height="400"
     dialog:DialogParticipation.Register="{Binding}"
+    Icon="/Files/Images/BadanieKrwi-Ikona.ico"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
