--- a/Views/NoweBadanieOkno.xaml
+++ b/Views/NoweBadanieOkno.xaml
@@ -13,6 +13,7 @@
     Width="477"
     Height="806"
     dialog:DialogParticipation.Register="{Binding}"
+    Icon="/Files/Images/BadanieKrwi-Ikona.ico"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
