--- a/Views/StatystykiOkno.xaml
+++ b/Views/StatystykiOkno.xaml
@@ -13,6 +13,7 @@
     Width="403"
     Height="500"
     dialog:DialogParticipation.Register="{Binding}"
+    Icon="/Files/Images/BadanieKrwi-Ikona.ico"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
